Grid: Fix: Columns were not centered

--- a/Exercise 2 CSS/assets/styles/responsive/grid.css
+++ b/Exercise 2 CSS/assets/styles/responsive/grid.css
@@ -12,6 +12,10 @@
 
 .row {
   width: 100%;
+  text-align: center;
+}
+
+.row > * {
   display: inline-block;
 }
 
